refine for Vert.X Core 4.2.1